--- a/templates/base.html
+++ b/templates/base.html
@@ -25,10 +25,10 @@
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="/cadastro-avaliador/">{% block menu01 %}+ Novo Avaliador{% endblock menu01 %}</a></li>
-					<li><a href="/cadastro-atleta/">{% block menu02 %}+ Novo Atleta{% endblock menu02 %}</a></li>
-					<li><a href="/lista-avaliadores/">{% block menu03 %}Avaliadores{% endblock menu03 %}</a></li>
-					<li><a href="/lista-atletas/">{% block menu04 %}Atletas{% endblock menu04 %}</a></li>
+					<li><a href="/cadastro-avaliador/">{% block menu01 %}{% endblock menu01 %}</a></li>
+					<li><a href="/cadastro-atleta/">{% block menu02 %}{% endblock menu02 %}</a></li>
+					<li><a href="/lista-avaliadores/">{% block menu03 %}{% endblock menu03 %}</a></li>
+					<li><a href="/lista-atletas/">{% block menu04 %}{% endblock menu04 %}</a></li>
 				</ul>
 			</div>
 		</div>
